--- a/docs/package.json
+++ b/docs/package.json
@@ -14,8 +14,7 @@
     "preprocess:dev": "nodemon --config nodemon.json ./src/preprocess/index.js  && nodemon --config nodemon.json src/preprocess/generate_aztecnr_reference.js ",
     "typedoc": "docusaurus generate-typedoc",
     "rewrite": "node ./scripts/rewrite_paths.js",
-    "version::stables": "node ./scripts/setStable.js",
-    "version": "./scripts/cut_version.sh"
+    "version::stables": "node ./scripts/setStable.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
