--- a/barretenberg/cpp/src/barretenberg/vm2/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/vm2/CMakeLists.txt
@@ -1,3 +1,5 @@
 if(NOT DISABLE_AZTEC_VM)
-  barretenberg_module(vm2 sumcheck stdlib_honk_verifier stdlib_goblin_verifier)
+  barretenberg_module(vm2 vm sumcheck stdlib_honk_verifier stdlib_goblin_verifier)
 endif()
+
+# TODO: Remove vm from dependencies once we move stats.hpp to vm2.
