--- a/noir-projects/noir-contracts/Nargo.toml
+++ b/noir-projects/noir-contracts/Nargo.toml
@@ -42,6 +42,7 @@ members = [
     "contracts/test/parent_contract",
     "contracts/test/pending_note_hashes_contract",
     "contracts/test/spam_contract",
+    "contracts/test/state_vars_contract",
     "contracts/test/stateful_test_contract",
     "contracts/test/static_child_contract",
     "contracts/test/static_parent_contract",
