--- a/spartan/aztec-network/templates/blob-sink.yaml
+++ b/spartan/aztec-network/templates/blob-sink.yaml
@@ -44,8 +44,17 @@ spec:
             - /bin/bash
             - -c
             - |
-              source /shared/config/service-addresses && \
-              env && \
+              source /shared/config/service-addresses
+
+              until curl --silent --head --fail "${BOOT_NODE_HOST}/status" > /dev/null; do
+                echo "Waiting for boot node..."
+                sleep 5
+              done
+              echo "Boot node is ready!"
+
+              output=$(node --no-warnings /usr/src/yarn-project/aztec/dest/bin/index.js get-node-info -u $BOOT_NODE_HOST --json)
+              export REGISTRY_CONTRACT_ADDRESS=$(echo $output | jq -r .l1ContractAddresses.registry)
+              env
               node --no-warnings /usr/src/yarn-project/aztec/dest/bin/index.js start --blob-sink
           startupProbe:
             httpGet:
@@ -83,8 +92,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            - name: ROLLUP_CONTRACT_ADDRESS
-              value: "{{ .Values.aztec.contracts.rollupAddress }}"
             - name: BLOB_SINK_PORT
               value: "{{ .Values.blobSink.service.nodePort }}"
             - name: LOG_LEVEL
