--- a/build-images/src/Dockerfile
+++ b/build-images/src/Dockerfile
@@ -74,7 +74,7 @@ RUN git clone https://github.com/tpoechtrager/osxcross.git \
 ########################################################################################################################
 # Build foundry.
 FROM base-build AS foundry
-ENV FOUNDRY_VERSION=1.0.0
+ENV FOUNDRY_VERSION=nightly-256cc50331d8a00b86c8e1f18ca092a66e220da5
 ENV FOUNDRY_BIN_DIR="/root/.foundry/bin"
 ENV RUSTUP_HOME=/opt/rust/rustup
 ENV CARGO_HOME=/opt/rust/cargo
