--- a/playground/package.json
+++ b/playground/package.json
@@ -22,6 +22,7 @@
     "@aztec/aztec.js": "link:../yarn-project/aztec.js",
     "@aztec/constants": "link:../yarn-project/constants",
     "@aztec/entrypoints": "link:../yarn-project/entrypoints",
+    "@aztec/ethereum": "link:../yarn-project/ethereum",
     "@aztec/foundation": "link:../yarn-project/foundation",
     "@aztec/kv-store": "link:../yarn-project/kv-store",
     "@aztec/noir-contracts.js": "link:../yarn-project/noir-contracts.js",
