--- a/noir-projects/noir-contracts/contracts/test/no_constructor_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/test/no_constructor_contract/Nargo.toml
@@ -6,4 +6,4 @@ type = "contract"
 
 [dependencies]
 aztec = { path = "../../../../aztec-nr/aztec" }
-
+value_note = { path = "../../../../aztec-nr/value-note" }
