--- a/noir-projects/noir-contracts/Nargo.toml
+++ b/noir-projects/noir-contracts/Nargo.toml
@@ -38,6 +38,7 @@ members = [
     "contracts/test/child_contract",
     "contracts/test/counter_contract",
     "contracts/test/import_test_contract",
+    "contracts/test/invalid_account_contract",
     "contracts/test/no_constructor_contract",
     "contracts/test/note_getter_contract",
     "contracts/test/parent_contract",
