--- a/.github/workflows/nightly-devnet-test.yml
+++ b/.github/workflows/nightly-devnet-test.yml
@@ -16,11 +16,11 @@ concurrency:
 env:
   # This path is a workaround because the runner does not have perms to upload files anywhere else
   STATE_S3_BASE_PATH: s3://aztec-ci-artifacts/build-cache
-  AZTEC_VERSION: 0.84.0-alpha-testnet.1
-  NODE_URL: http://104.198.9.75:8080
-  SPONSORED_FPC_ADDRESS: "0x2742bae7b298acd9ae3f09ff48f6e6254f1e28bb71fbec9b6e79fe9955adf83c"
-  L1_URL: http://34.169.129.31:8545
-  FAUCET_URL: http://104.199.115.217:8086
+  STATE_S3_KEY: build-cache/devnet-nightly-tests-state.json
+  AZTEC_VERSION: 0.85.0-alpha-testnet.0
+  NODE_URL: http://34.169.170.55:8080
+  L1_URL: http://34.169.72.63:8545
+  FAUCET_URL: http://34.169.129.31:8086
 
 jobs:
   cli-wallet:
@@ -39,24 +39,6 @@ jobs:
           sparse-checkout: |
             spartan/devnet-smoke-tests
 
-      # TODO: Remove after we see this script succeed consistently
-      - name: Reset state for testing
-        run: |
-          echo '{"accounts": [], "contracts": []}'> state.json
-          aws s3 cp ./state.json ${{ env.STATE_S3_BASE_PATH }}/devnet-nightly-tests-state.json
-
-      - name: Retrieve state or set default if not
-        run: |
-          aws s3 cp ${{ env.STATE_S3_BASE_PATH }}/devnet-nightly-tests-state.json ./state.json || echo '{"accounts": [], "contracts": []}'> state.json
-          cat ./state.json
-
       - name: Run smoke tests
         run: |
           ./spartan/devnet-smoke-tests/main.sh
-
-      - name: Re-commit state
-        run: |
-          jq '.last_modified = (now | tostring)' state.json > tmp.json && mv tmp.json state.json
-          cat ./state.json
-
-          aws s3 cp ./state.json ${{ env.STATE_S3_BASE_PATH }}/devnet-nightly-tests-state.json
