--- a/barretenberg/ts/package.json
+++ b/barretenberg/ts/package.json
@@ -92,14 +92,13 @@
     "prettier": "^2.8.4",
     "resolve-typescript-plugin": "^2.0.1",
     "source-map-support": "^0.5.21",
-    "terser-webpack-plugin": "^5.3.11",
+    "terser-webpack-plugin": "^5.3.14",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "5.4.5",
-    "webpack": "^5.82.1",
-    "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^5.2.0",
-    "worker-loader": "^3.0.8"
+    "webpack": "^5.99.6",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   }
 }
