chore(docs): moving netlify action

--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -44,8 +44,17 @@ jobs:
 
       # Making the bash script here so we don't accidentally deploy
       - name: Deploy docs
+        working-directory: ./docs
         run: |
-          ./docs/bootstrap.sh release
+          echo "deploying docs to prod"
+          yarn install
+          yarn build
+
+          if ! deploy_output=$(yarn netlify deploy --site aztec-docs-dev --prod 2>&1); then
+            echo "Netlify deploy failed with error:"
+            echo "$deploy_output"
+            exit 1
+          fi
 
       - name: Reindex with Typesense docsearch-scraper
         run: |
